# ufo-upiv

./: .gitignore  .gitmodules  Makefile  README.md  SourceMe.sh  config_SampleA.py  config_SampleB.py  config_SampleC.py  config_sample.py  config_sampleB.py  config_sampleC.py  config_template.py  fit.py  piv-hough.py  piv-hough2.py  piv-ordfil.py  piv-scale.py  piv-test.py  piv.py  quick-test-2.py  quick-test.py  ufo_extension.py
benchmarking/: 520.json  plotshelper.py
benchmarking/1/: 538.json  plot.py  plot_all.py
benchmarking/2/: plot.py
benchmarking/data/: ipepdvcomput2-v2.txt  ipepdvcompute1.txt  ipepdvcompute2.txt  opencl.16394.json  trace.16394.json
config/: .gitignore  config_example.cfg  hough_SampleA.cfg  hough_SampleB.cfg  hough_SampleC.cfg
data/: .gitignore  Makefile  Makefile.conf  SampleB.cfg  SampleC.cfg  configSampleA.cfg  configSampleB.cfg  configSampleC.cfg  config_SampleC.py
data/input/: sampleA-0158.tif
doc/benchmarking/1/: data.txt  plotshelper.py
doc/benchmarking/2/: 540.json  plot.py  plotshelper.py
doc/summary/: summary.tex  uptv.tex
filters/: .gitignore  CMakeLists.txt  SourceMe.sh
filters/include/: ufo-ring-coordinates.h
filters/kernels/: candidate.cl  fillzero.cl  found_cand.cl  hessian.cl  hough.cl  mult.cl  piv_contrast.cl
filters/ordfilt/: ufo-filter-particle-task.c  ufo-get-dup-circ-task.c  ufo-of-ring-pattern-task.h  ufo-ordfilt-task.c
filters/src/: CMakeLists.txt  ufo-azimuthal-test-task.c  ufo-azimuthal-test-task.h  ufo-bilateral-task.c  ufo-blob-test-task.c  ufo-blob-test-task.h  ufo-brightness-cut-task.h  ufo-candidate-filter-task.c  ufo-candidate-filter-task.h  ufo-candidate-sorting-task.c  ufo-candidate-sorting-task.h  ufo-combine-test-task.c  ufo-complex-mult-task.c  ufo-device-info-task.c  ufo-device-info-task.h  ufo-fftconvolution-task.c  ufo-fftconvolution-task.h  ufo-hessian-analysis-task.c  ufo-hessian-kernel-task.c  ufo-hough-likelihood-image-task.c  ufo-hough-likelihood-image-task.h  ufo-hough-likelihood-task.c  ufo-hough-likelihood-task.h  ufo-hough-liklihood-task.c  ufo-hough-liklihood-task.h  ufo-label-cluster-task.c  ufo-label-cluster-task.h  ufo-local-maxima-task.c  ufo-local-maxima-task.h  ufo-localmaxima-task.c  ufo-log-task.c  ufo-log-task.h  ufo-multi-search-task.c  ufo-multi-search-task.h  ufo-piv-contrast-task.c  ufo-piv-contrast-task.h  ufo-ring-pattern-task.c  ufo-ring-writer-task.c
input/: sampleB-0001.tif  sampleC-0050.tif
piv/: ddict.py  pivjob.py  taskgraph.py  testjob.py  ufo_extension.py  ufojob.py  utils.py
python/: fitting.py  pivjob.py  testjob.py  ufo_extension.py  ufojob.py  utils.py
tests/: azimuthal.py  contrast.py  denoise.py  example.py  hough-likelihood.py  hough-liklihood-mask.txt  hough-liklihood.py  plot-ring-on-pics.py  plot-rings.py  py_azimuthal.py  quicktest.py  test-a.py  test-azimuthal.py  test-bilateral.py  test-blob-detection.py  test-contrast.py  test-convolve.py  test-denoise.py  test-example.py  test-ring-pattern.py  test-roi.py  utils.py
tests/inputs/: input0.tif  input2_can.tif
ufo/: CMakeLists.txt
ufo/kernels/: candidate.cl  combine.cl  localmax.cl  mult.cl
ufo/src_hough/: CMakeLists.txt  ufo-azimuthal-test-task.h  ufo-bilateral-task.h  ufo-blob-test-task.c  ufo-brightness-cut-task.c  ufo-combine-test-task.h  ufo-complex-mult-task.h  ufo-contrast-task.c  ufo-fftconvolution-task.c  ufo-fftconvolution-task.h  ufo-hessian-analysis-task.h  ufo-hessian-kernel-task.h  ufo-hough-likelihood-image-task.c  ufo-localmaxima-task.c  ufo-localmaxima-task.h  ufo-piv-contrast-task.c  ufo-ring-pattern-task.c  ufo-ring-writer-task.c  ufo-ring-writer-task.h  ufo-sum-task.c  ufo-sum-task.h
ufo/src_ordfilt/: CMakeLists.txt  ufo-concatenate-result-task.c  ufo-of-ring-pattern-task.c
upiv/: ufo_extension.py
